# omnify

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  arps.json  chord_notes.json  chord_offsets.json  chords.py  daemomnify.py  daemomnify_settings.json  message_scheduler.py  omnify.py  pyproject.toml  settings.py  util.py  uv-run-dev  wizard.py
.claude/: CLAUDE.md  handoff-input-output-ui.md  hooks.json  running_python.md
.claude/commands/: install.md
.claude/hooks/: Write.sh  format-cpp.sh  format-py.sh  run-with-log.sh
.github/workflows/: release.yml
Omnichord Facts/: OM 108 Chord Voicings.md
_site/: index.html  manual.html
_site/assets/css/: lcars.css
docs/: CNAME  Gemfile  _config.yml  index.md  manual.md  serve.sh
docs/_includes/: footer.html  nav.html
docs/_layouts/: default.html
docs/assets/css/: lcars.css
packaging/macos/: entitlements.plist
src/: CMakeLists.txt  Daemomnify.cpp  Daemomnify.h  MidiMessageScheduler.cpp  MidiMessageScheduler.h  Omnify.cpp  Omnify.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  compile.sh
src/Resources/: default_settings.json
src/daemomnify/: __main__.py  chords.py  daemomnify.py  event_dispatcher.py  omnify.py  settings.py  util.py  wizard.py
src/daemomnify/chord_voicings/: bundled_file_style.py  file_style.py
src/daemomnify/chord_voicings/chord_voicing_files/: om_108_chord_voicing_offsets.json  om_108_chord_voicings.json
src/daemomnify/reified_voicing_styles/: chord_notes.json  chord_voicing_style_reifyer.py  om_108_chord_voicing_offsets.json  om_108_chord_voicings.json  strum_sequences_from_omni_84.json
src/datamodel/: ChordQuality.cpp  DawOrDevice.h  OmnifySettings.cpp  OmnifySettings.h  VoicingModifier.h  VoicingStyle.h  VoicingType.h
src/ui/: LcarsLookAndFeel.h
src/ui/components/: ChordQualitySelector.cpp  ChordQualitySelector.h  FromFileView.cpp  FromFileView.h  MidiIOPanel.cpp  MidiIOPanel.h  MidiLearnComponent.cpp  PianoKeyboardDisplay.cpp  PianoKeyboardDisplay.h  VariantSelector.cpp  VariantSelector.h
src/ui/panels/: ChordQualityPanel.cpp  ChordQualityPanel.h  ChordSettingsPanel.cpp  ChordSettingsPanel.h  StrumSettingsPanel.cpp  StrumSettingsPanel.h
src/voicing_styles/: FromFile.h  Omni84.h  OmnichordChords.h  OmnichordSmoothVoiced.h  OmnichordStrum.h  PlainAscending.h  RootPosition.h  SmoothVoiced.h  SmoothedFull.h
tests/: test_settings.py
vst/: CMakeLists.txt  Chords.cpp  Chords.h  DaemonManager.cpp  DaemonManager.h  GeneratedAdditionalSettings.cpp  GeneratedAdditionalSettings.h  GeneratedParams.cpp  GeneratedParams.h  GeneratedSettings.cpp  GeneratedSettings.h  MidiMessageScheduler.cpp  MidiMessageScheduler.h  MidiThread.cpp  MidiThread.h  Omnify.cpp  Omnify.h  OmnifyLogger.cpp  OmnifyLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  ResourcesPath.cpp  compile.sh  generate_settings.py  generate_vst_params.py  install.sh
vst/Resources/: default_settings.json  magic.xml  magic_auto_gen.xml
vst/datamodel/: ChordQuality.cpp  ChordQuality.h  MidiButton.cpp  MidiButton.h  OmnifySettings.cpp  OmnifySettings.h  VoicingStyle.h
vst/ui/: GuiItems.cpp  GuiItems.h  LcarsColors.h  LcarsLookAndFeel.h
vst/ui/components/: ChordQualitySelector.cpp  ChordQualitySelector.h  ChordQualitySelectorComponent.cpp  ChordQualitySelectorComponent.h  ChordQualitySelectorItem.cpp  ChordQualitySelectorItem.h  FilePicker.cpp  FilePicker.h  FilePickerItem.cpp  FilePickerItem.h  FromFileView.cpp  FromFileView.h  MidiDeviceSelectorItem.cpp  MidiDeviceSelectorItem.h  MidiLearnComponent.cpp  MidiLearnComponent.h  VariantSelector.cpp  VariantSelector.h  VariantSelectorItem.cpp  VariantSelectorItem.h
vst/ui/panels/: ChordQualityPanel.cpp  ChordQualityPanel.h  ChordSettingsPanel.cpp  ChordSettingsPanel.h  StrumSettingsPanel.cpp  StrumSettingsPanel.h
vst/voicing_styles/: FromFile.h  Omni84.h  OmnichordChords.h  OmnichordStrum.h  PlainAscending.h  RootPosition.h
